sw/source/core/text/wrong.cxx
@@ -29,7 +29,7 @@ SwWrongArea::SwWrongArea( const OUString& rType, WrongListType listType,
         css::uno::Reference< css::container::XStringKeyMap > const & xPropertyBag,
         sal_Int32 nPos,
         sal_Int32 nLen)
-: maType(rType), mnPos(nPos), mnLen(nLen), mpSubList(nullptr)
+: maType(rType), mxPropertyBag(xPropertyBag), mnPos(nPos), mnLen(nLen), mpSubList(nullptr)
 {
     mColor =  getWrongAreaColor(listType, xPropertyBag);
     mLineType = getWrongAreaLineType(listType, xPropertyBag);
@@ -40,7 +40,7 @@ SwWrongArea::SwWrongArea( const OUString& rType,
         sal_Int32 nPos,
         sal_Int32 nLen,
         SwWrongList* pSubList)
-: maType(rType), mnPos(nPos), mnLen(nLen), mpSubList(pSubList), mLineType(WRONGAREA_NONE)
+: maType(rType), mxPropertyBag(xPropertyBag), mnPos(nPos), mnLen(nLen), mpSubList(pSubList), mLineType(WRONGAREA_NONE)
 {
     if (pSubList != nullptr)
     {
